CFYP-76 - Fixed spacing in laptop screen mode

--- a/src/css/controls.css
+++ b/src/css/controls.css
@@ -6,6 +6,10 @@
     border: none !important;
 }
 
+.switcher-box {
+    margin-left: 2.5vw;
+}
+
 .info-panel-box {
     justify-content: center;
     align-items: center;
